crates/dora-ir/src/tests/snapshots/dora_ir__tests__wasm__load_i32.snap
---
source: crates/dora-ir/src/tests/wasm.rs
expression: "test_module(& context, i32_type, block).as_operation()"
snapshot_kind: text
---
module {
  func.func @test_func(%arg0: i32) {
    %0 = "wasm.load"(%arg0) : (i32) -> i32
  }
}
